Correct problem with buttons on mobile device

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -8,7 +8,7 @@
     color: clr(neutral, 900);
     background-color: clr(primary, 500);
     padding: 1em 1.5em;
-    margin-inline: size(8);
+    margin: size(8);
 
     justify-self: center;
 
