--- a/sass/utilities/_container.scss
+++ b/sass/utilities/_container.scss
@@ -2,8 +2,9 @@
 
 .container {
     --wide-container: 80rem; // Optional container width for inline style
+    --normal-container: 60rem; // Optional container width for inline style
     --narrow-container: 40rem; // Optional container width for inline style
-    --container-width: 60rem;
-    width: min(100% - 2rem, var(--container-width));
+
+    width: min(100% - 2rem, var(--container-width, var(--normal-container)));
     margin-inline: auto;
 }
